fix scroll margin and reduce width of overlays on small screen

--- a/src/app/pages/main/00 slideshow/slideshow.component.css
+++ b/src/app/pages/main/00 slideshow/slideshow.component.css
@@ -1,4 +1,4 @@
 .carousel-container {
   height: 80vh;
-  width: 100vw
+  width: 100%;
 }
