--- a/src/styles.css
+++ b/src/styles.css
@@ -56,12 +56,10 @@ html {
 }
 
 body {
-  /* min-height: 100%; */
   overflow-x: hidden;  
-  /* border: 1px red solid; */
   color: var(--text-colour);
   line-height: var(--line-height);
-  width: 100vw;
+  width: 100%;
   margin: 0px;
   padding: 0;
   font-size: 1.3rem;
@@ -171,7 +169,6 @@ a:visited {
 
 .dynamic-container {
   position: relative;
-  /* background-color: white; */
   padding-inline: calc( (100vw - var(--container-width) ) / 2 );
   padding-top: 1px;
   padding-bottom: 1rem;
@@ -187,70 +184,25 @@ a:visited {
   box-sizing: border-box;
 }
 
-@media (hover: hover){
-  /* if not a touch screen then add an additional right margin to accouunt for scrollbar*/
-  /* .dynamic-container{
-    margin-right: 1em;
-  } */
-}
 
 @media (max-width: 575px) {
-  :root{ --container-width: calc(100vw - 2em); }
-  html {font-size: 14px;}
+  html { font-size: 14px; }
+  :root{ --container-width: calc(100% - 2em); }
   .window{ height: 80vh; }
-  /* .slideshow{ height: 60vh; } */
 }
 @media (min-width: 576px) and (max-width: 767px) {
-  html {font-size: 14px;}
+  html { font-size: 14px; }
   :root{ --container-width: 540px; }
   .window { height: 80vh; }
-  /* .slideshow{ height: 80vh; } */
 }
 @media (min-width: 768px) and (max-width: 991px) {
-  html {font-size: 16px;}
+  html { font-size: 16px; }
   :root{ --container-width: 720px; }
   .window { height: 80vh; }
-  /* .slideshow{ height: 80vh; } */
 }
 @media (min-width: 992px) {
-  html {font-size: 16px;}
+  html { font-size: 16px; }
   :root{ --container-width: 960px; }
   .window { height: 80vh; }
-  /* .slideshow{ height: 80vh; } */
 }
-
-/* @media (min-width: 992px) and (max-width: 1199px) {
-  html {font-size: 16px;}
-  :root{ --container-width: 960px; }
-  .window { height: 80vh; }
-  .slideshow{ height: 80vh; }
-} */
-/* @media (min-width: 1200px) and (max-width: 1399px) {
-  html {font-size: 16px;}
-  :root{ --container-width: 1140px; }
-  .window { height: 80vh; }
-  .slideshow{ height: 80vh; }
-}
-@media (min-width: 1400px) {
-  html {font-size: 16px;}
-  :root{ --container-width: 1320px; }
-  .window { height: 80vh; }
-  .slideshow{ height: 80vh; }
-} */
-
-/* ===================================================
-           Google Ads
- ===================================================*/
-/* 
-.adsense-right {
-  width: 250px;
-  background-color: greenyellow;
-}
-
-.adsense-content {
-  margin: 0px;
-  width: 100%;
-  height: 100px;
-  background-color: greenyellow;
-} */
 
